<resources>
    <string name="app_name">TicketTracker</string>
    <string name="ticket_tracker">Ticket Tracker</string>
    <string name="db_name">TicketTracker.db</string>

    <!--Tabs -->
    <string name="all">ALL</string>
    <string name="active">ACTIVE</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>

    <!-- Activities -->
    <string name="add_new_ticket">Add new ticket</string>
    <string name="edit_ticket">Edit ticket</string>

    <!-- Drawer menu items -->
    <string name="tickets">Tickets</string>
    <string name="add_ticket">Add ticket</string>
    <string name="live_score">Live score</string>
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Errors -->
    <string name="error_msg_required">This field is required.</string>
    <string name="error_msg_max_length">Max length is 30 characters.</string>

    <!-- Personal details -->
    <string name="about_me_text">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Etiam vitae hendrerit quam, nec pretium magna. Sed non
        finibus felis. Vestibulum aliquet quam aliquam sapien sodales mollis.
        Duis purus libero, sollicitudin commodo venenatis ut, scelerisque ut est.
        Vivamus justo enim, vulputate ac turpis eu, aliquet consequat quam.
        Aenean in arcu viverra, vehicula neque vitae, mattis felis. Pellentesque
        auctor non sapien non varius. Lorem ipsum dolor sit amet, consectetur
        adipiscing elit. Etiam vitae hendrerit quam, nec pretium magna. Sed non
        finibus felis. Vestibulum aliquet quam aliquam sapien sodales mollis.
        Duis purus libero, sollicitudin commodo venenatis ut, scelerisque ut est.
        Vivamus justo enim, vulputate ac turpis eu, aliquet consequat quam. Aenean
        in arcu viverra, vehicula neque vitae, mattis felis. Pellentesque auctor non
        sapien non varius.\n
        \n
    </string>
    <string name="author_name">Dragoljub Ilic</string>
    <string name="author_birthday">20.06.1992.</string>
    <string name="author_index">R1 4/2015</string>
    <string name="author_college">FTN SIIT</string>

    <!--Add new ticket -->
    <string name="ticket_name">Ticket name</string>
    <string name="possible_gain">Possible gain</string>
    <string name="matches">Matches:</string>

    <!-- Modal dialog -->
    <string name="league">League</string>
    <string name="date">Date</string>
    <string name="match">Match</string>
    <string name="bet">Bet</string>

    <string name="premier_league">Premier League</string>
    <string name="primera_division">Primera Division</string>
    <string name="seria_a">Seria A</string>
    <string name="bundesliga">Bundesliga</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="champions">Champions League</string>
    <string name="euro_2016">EURO 2016</string>

    <!-- Preferences -->
    <string name="sync_settings">sync_settings</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_settings">Auto data sync</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically</string>
    <string name="pref_sync_list_interval">pref_sync_list_interval</string>
    <string name="pref_sync_interval">Sync interval</string>
    <string name="pref_sync_list_type">pref_sync_list_type</string>
    <string name="pref_sync_type">Sync connection type</string>

    <string name="notification_settings">notification_settings</string>
    <string name="pref_notification">pref_notification</string>
    <string name="pref_notification_settings">Notifications</string>
    <string name="pref_notification_title">Allow notification</string>
    <string name="pref_notification_summ">Allow app to receive notifications</string>
    <string name="pref_notification_list_type">pref_notification_list_type</string>
    <string name="pref_notification_type">Notification type</string>

    <string name="leagues_settings">leagues_settings</string>
    <string name="pref_leagues">pref_leagues</string>
    <string name="pref_leagues_settings">Live score</string>
    <string name="pref_leagues_summ">Select leagues that you want to see in live score</string>
    <string name="pref_leagues_list_type">pref_leagues_list_type</string>
    <string name="pref_leagues_type">Leagues</string>

    <!-- Tasks -->
    <string name="loading_matches">Loading matches...</string>
    <string name="no_any_matches_for_league">There is not any match for leagues.</string>
    <string name="check_settings_or_net_conn">Check settings or net connection.</string>
    <string name="sync_in_progress">Sync in progress...</string>
    <string name="no_active_tickets">There is no active tickets.</string>

    <!-- Save action -->
    <string name="name_required">Ticket name is required.</string>
    <string name="max_length_30">Max length is 30 characters.</string>
    <string name="possible_gain_double">Possible gain must be double value.</string>
    <string name="cant_save_without_matches">Cant save ticket without matches.</string>
    <string name="max_matches_per_ticket">Max matches per ticket is 20.</string>
    <string name="check_status_state">Ticket is already finished.</string>

    <string name="are_you_sure_to_exit">Are you sure that u want to exit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="error">Error</string>

    <string name="confirm">Confirm</string>
    <string name="are_you_sure_to_delete">Are you sure that u want to delete</string>

    <string name="add">ADD</string>
    <string name="close">CLOSE</string>
    <string name="invalid_match_parameters">Invalid match parameters.</string>
    <string name="no_email_clients">There is no email client installed.</string>
    <string name="send_mail">Send mail...</string>

    <string name="add_new_match_on_ticket">Add new match on ticket</string>
    <string name="save_current_ticket">Save current ticket</string>
    <string name="cant_add_more_than_once">Cant add one match more than once.</string>

</resources>
