<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/sync_settings"
        android:title="@string/pref_sync_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:title="@string/pref_sync_title" />

        <ListPreference
            android:defaultValue="5"
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_sync_interval"
            android:entries="@array/pref_sync_interval_entries"
            android:entryValues="@array/pref_sync_interval_values"
            android:key="@string/pref_sync_list_interval"
            android:summary="%s"
            android:title="@string/pref_sync_interval" />

        <ListPreference
            android:defaultValue="wifi"
            android:dependency="@string/pref_sync"
            android:dialogTitle="@string/pref_sync_type"
            android:entries="@array/pref_sync_type_entries"
            android:entryValues="@array/pref_sync_type_values"
            android:key="@string/pref_sync_list_type"
            android:summary="%s"
            android:title="@string/pref_sync_type" />

    </PreferenceCategory>

    <PreferenceCategory
        android:dependency="@string/pref_sync"
        android:key="@string/notification_settings"
        android:title="@string/pref_notification_settings">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_notification"
            android:summary="@string/pref_notification_summ"
            android:title="@string/pref_notification_title" />

        <ListPreference
            android:defaultValue="all"
            android:dependency="@string/pref_notification"
            android:dialogTitle="@string/pref_notification_type"
            android:entries="@array/pref_notification_type_entries"
            android:entryValues="@array/pref_notification_type_values"
            android:key="@string/pref_notification_list_type"
            android:summary="%s"
            android:title="@string/pref_notification_type" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/leagues_settings"
        android:title="@string/pref_leagues_settings">

        <MultiSelectListPreference
            android:defaultValue="@array/pref_leagues_values"
            android:dialogTitle="@string/pref_leagues_type"
            android:entries="@array/pref_leagues_entries"
            android:entryValues="@array/pref_leagues_values"
            android:key="@string/pref_leagues_list_type"
            android:summary="@string/pref_leagues_summ"
            android:title="@string/pref_leagues_type" />
    </PreferenceCategory>
</PreferenceScreen>