<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title=""/>
    <item
        android:title="@string/tickets"
        android:icon="@drawable/home"
        android:id="@+id/drawer_home"/>

    <item
        android:title="@string/add_ticket"
        android:icon="@drawable/plus_box"
        android:id="@+id/drawer_add_ticket"/>

    <item
        android:title="@string/live_score"
        android:icon="@drawable/soccer"
        android:id="@+id/drawer_live_score"/>

    <group android:id="@+id/group_settings_id">
        <item
            android:title="@string/sync"
            android:icon="@drawable/sync"
            android:id="@+id/drawer_sync"/>

        <item
            android:title="@string/settings"
            android:icon="@drawable/settings"
            android:id="@+id/drawer_settings"/>
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:title="@string/about"
                android:icon="@drawable/information_outline"
                android:id="@+id/drawer_about"/>
            <item
                android:title="@string/exit"
                android:icon="@drawable/exit_to_app"
                android:id="@+id/drawer_exit"/>
        </menu>
    </item>
</menu>