<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="2dp">

    <ImageView
        android:id="@+id/thumbnail_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/about_me" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/thumbnail_view"
        android:text="@string/author_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_name"
        android:layout_toRightOf="@id/thumbnail_view"
        android:text="@string/author_birthday"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_birthday"
        android:layout_toRightOf="@id/thumbnail_view"
        android:text="@string/author_index"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author_college"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_index"
        android:layout_toRightOf="@id/thumbnail_view"
        android:text="@string/author_college"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sendEmail"
        android:layout_width="wrap_content"
        android:layout_below="@id/author_college"
        android:layout_toRightOf="@id/thumbnail_view"
        android:layout_height="wrap_content"
        android:text="@string/contact"/>

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thumbnail_view"
        android:scrollbars="vertical"
        android:layout_marginTop="15dp">

        <me.biubiubiu.justifytext.library.JustifyTextView
            android:id="@+id/message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me_text"
            android:textSize="18sp" />
    </ScrollView>

</RelativeLayout>