<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:minWidth="280dp"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/league"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            app:ms_alignLabels="false"
            app:ms_arrowSize="12dp"
            app:ms_hint="@string/league"
            app:ms_multiline="false" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-15dp"
            app:ms_alignLabels="false"
            app:ms_arrowSize="12dp"
            app:ms_hint="@string/date"
            app:ms_multiline="false" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/match"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-15dp"
            app:ms_alignLabels="false"
            app:ms_arrowSize="12dp"
            app:ms_hint="@string/match"
            app:ms_multiline="false" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/bet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/match"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="-15dp"
            app:ms_alignLabels="false"
            app:ms_arrowSize="12dp"
            app:ms_hint="@string/bet"
            app:ms_multiline="false" />
    </LinearLayout>
</ScrollView>